--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
 
         <!-- Font awesome and google fonts-->
         <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
@@ -48,7 +49,7 @@
                         <a href="" class="nav-link"> <i class="fa fa-list fa-lg"></i> Sites</a>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-link"> <i class="fa fa-address-card fa-lg"></i> Contact</a>
+                        <a href="contactus.html" class="nav-link"> <i class="fa fa-address-card fa-lg"></i> Contact</a>
                     </li>
                 </ul>
             </div>
@@ -94,22 +95,22 @@
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="aboutus.html">About</a></li>
                         <li><a href="#">Sites</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-sm-5 text-center">
                     <h5>Social</h5>
-                        <a href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
-                        <a href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
-                        <a href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-                        <a href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                    <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
+                    <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
+                    <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+                    <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
                 </div>
-                <div class="col-sm-4">
-                    <i class="fa fa-phone fa-lg text-primary"></i> 1-206-555-1234<br />
-                    <i class="fa fa-envelope fa-lg text-primary"></i> campsites@nucamp.com
-                </div>                
+                <div class="col-sm-4 text-center">
+                    <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-206-555-1234</a><br />
+                    <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
+                </div>           
            </div>
         </div>
     </footer>
