--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col col-md-4 col-xl-2 mt-4">
-                    <a type="button" data-toggle="modal" data-target="#reserveModal" role="button" class="btn btn-lg">Reserve Campsite</a>                
+                    <button type="button" data-toggle="modal" data-target="#reserveModal" role="button" class="btn btn-lg btn-primary">Reserve Campsite</button>                
                 </div>
             </div>
         </div>
@@ -200,6 +200,10 @@
                         <span class="carousel-control-next-icon"></span>
                         <span class="sr-only">Next</span>
                     </a>
+
+                        <button class="btn btn-danger btn-sm" id="carouselButton">
+                            <i class="fa fa-pause"></i>
+                        </button>
                 </div>
             </div>
         </div>
@@ -285,8 +289,21 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <script>
-      
-    </script>
+            $(function() {
+                $(".carousel").carousel( { interval: 2000 } );
+                $("#carouselButton").click(function(){
+                    if ($("#carouselButton").children("i").hasClass("fa-pause")) {
+                        $(".carousel").carousel("pause");
+                        $("#carouselButton").children("i").removeClass("fa-pause");
+                        $("#carouselButton").children("i").addClass("fa-play");
+                    } else {
+                        $(".carousel").carousel("cycle");
+                        $("#carouselButton").children("i").removeClass("fa-play");
+                        $("#carouselButton").children("i").addClass("fa-pause"); 
+                    }
+                });
+            });
+        </script>
 
 </body>
 
