--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     
-        <!-- Bootstrap CSS -->
+        <!-- build:css css/main.css -->
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
         <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+        <link rel="stylesheet" href="css/styles.css" />
+    <!-- endbuild -->
 
         <!-- Font awesome and google fonts-->
-        <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
         <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
     
         <link rel="stylesheet" href="css/styles.css" />
@@ -31,7 +33,7 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col col-md-4 col-xl-2 mt-4">
-                    <button type="button" data-toggle="modal" data-target="#reserveModal" role="button" class="btn btn-lg btn-primary">Reserve Campsite</button>                
+                    <button type="button" id="reserveButton" role="button" class="btn btn-lg btn-primary">Reserve Campsite</button>                
                 </div>
             </div>
         </div>
@@ -61,7 +63,7 @@
                 </ul>
 
                 <span class="navbar-text ml-auto">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <a id="loginButton">
                     <i class="fa fa-sign-in"></i> Login</a>
                 </span>
             </div>
@@ -72,7 +74,7 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title bg-white text-info">Reserve a Campsite </h4>
+                    <h4 class="modal-title">Reserve a Campsite </h4>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <div class="modal-body">
@@ -287,7 +289,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
     <script src="js/script.js"></script>
 
 </body>
